Use HH:mm:ss for task times across schema and docs